--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color:skyblue;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.designing{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+ 
+}
+button{
+  background: rgb(0, 111, 255);
+  border: none;
+  border-radius:50px;
+  padding: 10px 18px;
+  color: white;
+}
+.h1Design{
+  /* border: 2px solid rgb(62, 62, 255); */
+  background: white;
+  box-shadow: 2px 2px 6px 2px #888888;
+  padding: 15px 20px;
+  border-radius: 50px;
+}
+.todosStyling{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
+.todosStyling button{
+  padding: 20px 20px;
+}
+.simpleFormStyling{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 130px auto;
+  background-color:rgba(25, 25, 255, 0.763);
+  width: 500px;
+  padding: 50px 50px;
+  color: white;
+  border-radius: 20px;
+}
+.simpleFormStyling div{
+  margin: 15px;
+}
+.simpleFormStyling input{
+  border-radius: 50px;
+  border: none;
+  padding: 6px;
+}
+.showStoreData{
+  background: rgba(25, 25, 255, 0.763);
+  color: white;
+  display: flex;
+  justify-content: space-around;
+}
+.changingCardColor{
+  background-color: rgba(219, 219, 219, 0.815);
 }
