--- a/src/index.css
+++ b/src/index.css
@@ -1,65 +1,64 @@
-body{
-  background-color:skyblue;
+body {
+  background-color: skyblue;
 }
-.designing{
+.designing {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
-button{
+button {
   background: rgb(0, 111, 255);
   border: none;
-  border-radius:50px;
+  border-radius: 50px;
   padding: 10px 18px;
   color: white;
 }
-.h1Design{
+.h1Design {
   /* border: 2px solid rgb(62, 62, 255); */
   background: white;
   box-shadow: 2px 2px 6px 2px #888888;
   padding: 15px 20px;
   border-radius: 50px;
 }
-.todosStyling{
+.todosStyling {
   display: flex;
   justify-content: center;
   align-items: center;
- 
 }
-.todosStyling button{
+.todosStyling button {
   padding: 20px 20px;
 }
-.simpleFormStyling{
+.simpleFormStyling {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 130px auto;
-  background-color:rgba(25, 25, 255, 0.763);
+  background-color: rgba(25, 25, 255, 0.763);
   width: 500px;
   padding: 50px 50px;
   color: white;
   border-radius: 20px;
 }
-.simpleFormStyling div{
+.simpleFormStyling div {
   margin: 15px;
 }
-.simpleFormStyling input{
+.simpleFormStyling input {
   border-radius: 50px;
   border: none;
   padding: 6px;
 }
-.showStoreData{
+.showStoreData {
   background: rgba(25, 25, 255, 0.763);
   color: white;
   display: flex;
   justify-content: space-around;
 }
-.changingCardColor{
+.changingCardColor {
   background-color: rgba(219, 219, 219, 0.815);
 }
-.active{
+/* .active{
   color: red;
-}
+} */
